# otus-cpp

./: CMakeLists.txt  README.md  count_primes.cpp  ex1.cpp  ex1.fixed.cpp  ex2_tickets.cpp  ex3_bank.cpp  producer_consumer.cv.cpp  producer_consumer.naive.cpp
.github/workflows/: cmake.yml
13_GoF_patterns_1/: .clang-tidy  CMakeLists.txt  conanfile.txt
13_GoF_patterns_1/.cache/clangd/index/: HTTPClient.h.6046BC49CABE9321.idx  HTTPRequest.h.7E12EB73A4447F1F.idx  HTTPRequest.h.DCEDB4EDE22144D1.idx  HTTPRequestBuilder.h.340BFE4A1F74DA1C.idx  HTTPRequestHandler.h.39CB8A40BAFE44AD.idx  HTTPRequestHandlerFactory.h.74050F450D12A68F.idx  HTTPResponse.h.659660DE8DAF726B.idx  HTTPServer.h.212E4A513516D5F3.idx  bench_connection_pool.cpp.44436D8252C6836D.idx  connection.h.6E4434D95278B321.idx  connection_pool.h.29CCFFF5FB816C89.idx  connection_wrapper.h.B7E787086960BA52.idx  healthchecker.h.D4283ED597219CFA.idx  logger.h.A59992FF3DD92F85.idx  logger.h.FA9FE9D6FEE42804.idx  logic.cpp.917CE781C3F1A18A.idx  logic.cpp.E230A3A9150FDF34.idx  logic.h.525D91941B997453.idx  logic.h.858F4A00FF497966.idx  main.cpp.0870DC155B5A00CC.idx  main.cpp.6E97EC3E1359016C.idx  main.cpp.6FFA54D599CDA9D9.idx  main.cpp.7775EC11FD587874.idx  main.cpp.7E02A64BE7478865.idx  main.cpp.96FEFCC916EE86BF.idx  main.cpp.B4D7CA9C6F8CED39.idx  main.cpp.B83A865714DADBC1.idx  main.cpp.E596B21393885434.idx  slides.h.07DE4781FDAC9CF7.idx  tests.cpp.2601D86007E2E6A9.idx  wysiwyg.h.0966EDE33B89F8A7.idx
13_GoF_patterns_1/abstract_factory/: main.cpp  slides.h
13_GoF_patterns_1/builder/: HTTPRequestBuilder.h  main.cpp
13_GoF_patterns_1/creation_patters/: CMakeLists.txt  abstract_factory.cpp  builder.cpp  dependency_injection.cpp  factory_method.cpp  lazy_initialization.cpp  multiton.cpp  object_pool.cpp  prototype.cpp  singleton.cpp
13_GoF_patterns_1/dependency_injection/: HTTPClient.h  HTTPRequest.h  HTTPResponse.h  healthchecker.h  tests.cpp
13_GoF_patterns_1/factory_method/: HTTPRequestHandler.h  HTTPRequestHandlerFactory.h  HTTPServer.h  main.cpp
13_GoF_patterns_1/fig/: abstract_factory.uml  builder.uml  dependency_injection.uml  factory_method.uml  laze_initialization.uml  object_pool.uml  prototype.uml  singleton.uml
13_GoF_patterns_1/lazy_initialization/: connection.h  connection_wrapper.h  main.cpp
13_GoF_patterns_1/object_pool/: bench_connection_pool.cpp  connection_pool.h
13_GoF_patterns_1/prototype/: main.cpp  wysiwyg.h
13_GoF_patterns_1/singleton/logger_multi/: logger.h  logic.cpp  main.cpp
13_GoF_patterns_1/singleton/logger_singleton/: logger.h  logic.cpp  main.cpp
26_lockfreeds/: CMakeLists.txt  count_primes.lock.better.cpp  count_primes.lock.cpp  count_primes.lockfree.cpp  count_primes.naive.cpp  is_prime.service.cpp  is_prime.service.lockfree.better.cpp  is_prime.service.lockfree.cpp  lockfree_stack.leak.cpp  lockfree_stack.reclaim.cpp  lockfree_stack.shared.cpp  threadsafe_queue.hpp
